<resources>
    <string name="app_name">WCC</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="Ingresar">Ingresar</string>
    <string name="Registrar">Registrar</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Usuario">Usuario</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="ingrese_su_contrase_a">Ingrese su Contraseña</string>
    <string name="nombre_cliente">nombre cliente</string>
    <string name="ingrese_el_nombre_del_cliente">Ingrese el nombre del cliente</string>
    <string name="ingrese_el_cliente">Ingrese el Cliente</string>
    <string name="cuenta_cliente">Cuenta Cliente</string>
    <string name="nombre_de_cliente">Nombre de Cliente</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="digite_el_monto_de_la_factura">Digite el monto de la Factura</string>
    <string name="ingrese_una_fecha">Ingrese una fecha</string>
    <string name="Editar">Editar</string>
    <string name="ingrese_el_que_desea">Ingrese el que desea</string>
    <string name="ingrese_su_nombre_de_usuario">Ingrese Su Nombre de Usuario</string>
    <string name="ingrese_la_contrase_a_deseada">Ingrese la contraseña deseada</string>
    <string name="ingrese_contrase_a_actual">Ingrese Contraseña Actual</string>
    <string name="ingrese_el_usuario_que_desea">Ingrese el Usuario que desea</string>
</resources>
