<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="una.ac.cr.wcc.UsuarioActivity">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/degradado"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">


            <LinearLayout
                android:id="@+id/firstEditarUsuario"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="1">

                <EditText
                    android:id="@+id/EditarUsuario"
                    android:layout_width="257dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/ingrese_su_nombre_de_usuario"

                    android:layout_weight="0.07" />

                <EditText
                    android:id="@+id/NuevoNomUsuario"
                    android:layout_width="257dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/ingrese_el_usuario_que_desea"

                    android:layout_weight="0.07" />
                <EditText
                    android:id="@+id/PassActual"
                    android:layout_width="257dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/ingrese_contrase_a_actual"

                    android:layout_weight="0.07" />
                <EditText
                    android:id="@+id/PassCambio"
                    android:layout_width="255dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/ingrese_la_contrase_a_deseada"

                    android:layout_weight="0.05" />

                <Button
                    android:id="@+id/btnShowDialogEditarUsuario"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="187dp"
                    android:background="@drawable/boton_redondo_editar"
                    android:layout_height="wrap_content"
                    android:textColor="@color/BLACK"
                    android:text="@string/editar"
                    />

            </LinearLayout>




    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
