<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="una.ac.cr.wcc.MainActivity">

    <RelativeLayout

        android:background="@drawable/degradado"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp">


        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="137dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/Usuario"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText2"
            android:layout_alignStart="@+id/editText2"
            android:layout_below="@+id/editText2"
            android:layout_marginTop="33dp"
            android:ems="10"
            android:hint="@string/Contraseña"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/boton_redondo"
            android:text="@string/Ingresar"
            android:textColor="@color/BLACK"
            android:layout_below="@+id/editText3"
            android:layout_alignLeft="@+id/editText3"
            android:layout_alignStart="@+id/editText3" />

        <Button
            android:id="@+id/Btn_Registrar"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="23dp"
            android:background="@drawable/boton_redondo"
            android:text="@string/Registrar"
            android:textColor="@color/BLACK"
            android:layout_below="@+id/btnIngresar"
            android:layout_alignLeft="@+id/btnIngresar"
            android:layout_alignStart="@+id/btnIngresar" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
