<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado"
    tools:context="una.ac.cr.wcc.Registro">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="551dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/Username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:textSize="40px"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="Nombre Nuevo usuario"
            android:layout_weight="0.05" />

        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/Usuario"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:textSize="40px"
            android:focusableInTouchMode="false"
            android:text="Ingrese su email"
            android:layout_weight="0.05" />

        <EditText
            android:id="@+id/email_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_height="wrap_content"
            android:text="@string/ingrese_su_contrase_a"
            android:textSize="40px"
            android:layout_weight="0.06" />

        <EditText
            android:id="@+id/pass_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/Contraseña"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/boton_registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40px"
            android:background="@drawable/boton_redondo_aceptar"
            android:text="Aceptar"
            android:textColor="@color/BLACK" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
